# 8thwall

./: .bazelrc  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
apps/desktop/: BUILD  RELEASING.md  app-build.sh  app-package.sh  builder.config.ts  local-server.ts  package-lock.json  package.json  stream-file-response.ts  tsconfig.json
apps/desktop/app/: BUILD  preload.ts  start.ts
apps/desktop/app/dev8-socket/: api.ts  dev8-socket-server.ts
apps/desktop/tools/: publish-release.sh
apps/image-target-cli/: README.md  package.json
apps/image-target-cli/src/: apply.js  batch.js  curved-geometry.js  files.js  interactive.js  interactive.test.js  types.ts
apps/image-target-cli/test/: all.sh  conical-default.txt  cylinder-default.txt  default-crop.txt  manual-crop.txt
bzl/node/: npm.bzl
bzl/thirdpartybuild/: cpprestsdk.BUILD  dawn.BUILD  glfw-raub.BUILD  glfw.BUILD  libarchive.BUILD  libuuid.BUILD  node-gles.BUILD  nodejs-nan.BUILD  spdlog-1-10.BUILD  vlfeat.BUILD
bzl/thirdpartybuild/assimp/: assimp.BUILD
c8/: BUILD
c8/ecs/: README.md
c8/ecs/src/runtime/: BUILD  (+2 more)
c8/ecs/tools/: generate-metadata.ts
c8/xrapi/: transform-test.ts  webgl-binding.ts  xrapi-bindings.ts
examples/: README.md
reality/cloud/xrhome/: gulpfile.ts  package-lock.json  package.json
reality/shared/: BUILD  time-utils.ts
reality/shared/desktop/: BUILD  electron-api.ts  image-target-api.ts  local-sync-types.ts
rules/: reality-shared-imports.js
scripts/: lint.sh
(+85 files in other folders)
