###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

MODULE_NAME = "the8thwall"

module(
    name = MODULE_NAME,
    version = "1.0",
    compatibility_level = 1,
)
